[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imports/crafting.png" type="Texture" id=1]
[ext_resource path="res://Imports/Thems/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Objects/craftingIDcard.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 2

[sub_resource type="CircleShape2D" id=1]
radius = 96.0833

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 2

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 34
font_data = ExtResource( 2 )

[node name="craftingIDcard" type="Area2D"]
material = SubResource( 5 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.898039, 0, 1, 1 )
material = SubResource( 6 )
scale = Vector2( 0.515, 0.4375 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -114.0
margin_top = -123.0
margin_right = 8.0
margin_bottom = -97.0
rect_scale = Vector2( 1.88, 1.84 )
custom_fonts/font = SubResource( 3 )
text = "Creat ID Card"

[node name="message" type="Panel" parent="."]
margin_left = -124.0
margin_top = -208.0
margin_right = 130.0
margin_bottom = -43.0

[node name="Label" type="Label" parent="message"]
margin_left = 22.0
margin_top = 16.0
margin_right = 232.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 7 )
text = "   You need 
     Plastic 
GreenBoard"

[connection signal="body_entered" from="." to="." method="_on_craftingIDcard_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_craftingIDcard_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
